Add animated 404 error page and i18n type generation
Introduces a new animated 404 error page with a finance emoji vortex and custom styling. Adds a script to generate TypeScript types from i18n JSON files and updates i18n types and English translations for consistency. Refactors the English and French home pages to use new components and calculators. Updates the styleguide to showcase the new error page and includes the corresponding CSS.

--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,8 @@
 {
   "lock": false,
   "tasks": {
+    "i18n:types": "deno run --allow-read --allow-write lib/i18n/generate-types.ts",
+    "i18n:check": "deno run --allow-read lib/i18n/generate-types.ts --check",
     "check": "deno fmt --check && deno lint && deno check **/*.ts && deno check **/*.tsx",
     "cli": "echo \"import '\\$fresh/src/dev/cli.ts'\" | deno run --unstable -A -",
     "manifest": "deno task cli manifest $(pwd)",
