Add TopBar, i18n route mapping, and 404 translations
Introduces a new TopBar component with styles and integrates it into the layout. Adds i18n route mapping utilities (lib/i18n/routes.ts) and translation scripts (translate.ts, translate-watch.ts) for automated translation management. Updates StripeNav to use locale-aware URLs, extends translation types and JSON files with error/404 keys, and localizes the 404 page. Also refines error page styles and updates the styleguide to preview the new error page layout.

--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,10 @@
 {
   "lock": false,
   "tasks": {
+    "translate": "deno run --allow-read --allow-write --allow-env --allow-net lib/i18n/translate.ts",
+    "translate:all": "deno run --allow-read --allow-write --allow-env --allow-net lib/i18n/translate.ts --all",
+    "translate:dry": "deno run --allow-read --allow-write --allow-env --allow-net lib/i18n/translate.ts --dry-run",
+    "translate:watch": "deno run --allow-read --allow-write --allow-env --allow-net --allow-run lib/i18n/translate-watch.ts",
     "i18n:types": "deno run --allow-read --allow-write lib/i18n/generate-types.ts",
     "i18n:check": "deno run --allow-read lib/i18n/generate-types.ts --check",
     "check": "deno fmt --check && deno lint && deno check **/*.ts && deno check **/*.tsx",
